# scrapy_playwright_demo

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  scrapy.cfg
.github/workflows/: ci.yml
MagicMock/mock.get()/139862243289920/: page-1.done
MagicMock/mock.get()/139862245424640/: page-2.done
scrapy_playwright_demo/: bootstrap.py  config.py  constants.py  container.py  items.py  middlewares.py  pipelines.py  retry.py  settings.py  types.py
scrapy_playwright_demo/middlewares/: retry.py
scrapy_playwright_demo/sinks/: __init__.py  base.py  fake.py  file.py  kafka.py  registry.py  s3.py
scrapy_playwright_demo/spiders/: __init__.py  base.py  zalando.py
scrapy_playwright_demo/utils/: logging.py
tests/: conftest.py  test_container.py  test_pagination.py  test_pipelines.py  test_utils.py
